--- a/styles.css
+++ b/styles.css
@@ -8,13 +8,14 @@
   font-family: 'Orbitron',sans-serif;
   
   
+  
 }
 
 
 :root {
   --bg-nav:#442f57;
-  --letter-secondary: #fff;
-  
+  --bg-btn:var(--bg-nav);
+  --letters-secondary: #fff;
   --letters-primary: rgba(0, 255, 247, 0.479);
 }
 header {
@@ -49,14 +50,13 @@ ul {
 .nav-bar li a {
  
   padding: 10px;
-  color: var(--letter-secondary);
+  color: var(--letters-secondary);
  
 }
 
 .hero{
   
-  color: var(--letter-secondary);
-  
+  color: var(--letters-secondary);  
   font-size: 18px;
 }
 
@@ -75,7 +75,8 @@ ul {
   display: flex;
   flex-direction: column;
   gap: 70px;
-  justify-content: space-evenly
+  justify-content: space-evenly;
+  align-items: flex-start;
 }
 
 .hero-img{
@@ -86,5 +87,34 @@ ul {
   width: 40%;
 }
 
+.hero-btn{
+  display: flex;
+  
+ 
+  justify-content: center;
+  gap: 30px;
 
+}
 
+.hero-btn li{
+  width: 170px;
+  height: 50px;
+  text-align: center;
+  
+  padding: 10px;
+  border-radius: 25px;
+}
+
+.hero-btn .hero-btn-secondary{
+  background: none;
+  border: 3px solid var(--bg-nav);
+}
+
+.hero-btn .hero-btn-primary{
+  background: var(--bg-nav);
+  
+}
+
+.hero-btn,.hero-btn-primary,a{
+  color: var(--letters-primary);
+}
