--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@
 :root {
   --bg-nav:#442f57;
   --bg-about:#442f5795;
+  --bg-cards-title:#fff;
   --letters-secondary: #fff;
   --letters-primary: rgba(0, 255, 247, 0.479);
 }
@@ -29,7 +30,7 @@
 }
 body{
   background:linear-gradient(100deg,#442f57c5, #b77e992b);
-  
+  width: 100%;
 }
 
 .img-logo {
@@ -69,7 +70,7 @@ ul {
 }
 
 .hero-content{
-  width: 100%;
+  
   width: 60vh;
   display: flex;
   flex-direction: column;
@@ -125,7 +126,7 @@ ul {
 .hero-btn,.hero-btn-primary,a{
   color: var(--letters-primary);
 }
-/* Seccón About */
+/* Sección About */
 .about {
   width: 100%;
   display: flex;
@@ -146,3 +147,53 @@ ul {
   display: flex;
  
 }
+.cards{
+  display: flex;
+  width: 100%;
+  height: 40vh;
+  justify-content: space-evenly;
+  align-items: start;
+}
+.sobre-mi{
+  width: 120vw;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+  padding: 10px;
+  
+}
+.img-sobre-mi img{
+  display: flex;
+  width: 30%;
+  justify-content: center;
+  align-items: center;
+  width: 10%;
+ 
+  
+  
+}
+.img img{
+  width: 20%;
+  
+}
+
+
+.container-card{
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
+  padding: 3%;
+  justify-content: center;
+  align-items: center;
+}
+
+.container-card .img{
+  display: flex;
+  justify-content: center;
+
+}
+
+
