--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,7 @@ ul {
     color: var(--letters-primary);
 }
 
+
 .nav-bar li a {
  
   padding: 10px;
@@ -83,7 +84,7 @@ ul {
 }
 
 .hero-img img{
- 
+ width: 100%;
   
   border-radius: 60%;
 }
@@ -151,6 +152,7 @@ ul {
   display: flex;
   width: 100%;
   height: 40vh;
+  color: var(--letters-secondary);
   justify-content: space-evenly;
   align-items: start;
 }
@@ -196,4 +198,124 @@ ul {
 
 }
 
+.titulo-card{
+  font-size: 18px;
 
+}
+
+
+.card-text{
+  
+  text-align: justify;
+  line-height: 25px;
+
+  
+}
+/* sección contacto */
+
+.contact{
+  width: 100%;
+  height: 70vh;
+  display: flex;
+  background-color:var(--bg-about);
+  justify-content: center;
+  
+  align-items: center;
+
+}
+
+.contact-info{
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  
+  align-items: start;
+  gap: 70px;
+}
+
+.contact-title{
+  width: 60%;
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  
+}
+
+.contact-iframe {
+  width: 40%;
+}
+
+.contact-iframe iframe{
+  border-radius: 20px;
+}
+
+.contact-info img{
+  width: 4%;
+}
+
+.contact-text{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+
+.contact-text img{
+  width: 7%;
+  background-color: #fff;
+  border-radius: 60%;
+  padding: 2%;
+}
+
+.contact-text p{
+  display: flex;
+  align-items: center;
+  font-size: 18px;
+  color: var(--letters-secondary);
+}
+
+.icons-contact{
+  width: 70%;
+  display: flex;
+  margin-left: 23%;
+  justify-content: start;
+  
+}
+
+/* sección footer */
+footer{
+  width: 100%;
+  height: 100px;
+  padding: 2%;
+
+  display: flex;
+  justify-content:center;
+}
+
+.logo-footer,img{
+  width: 18%;
+  border-radius: 50%;
+}
+
+.logo-footer{
+  display: flex;
+  justify-content: end;
+}
+.container-footer{
+  display: flex;
+  width: 80%;
+  height: 60px;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+ 
+  color: var(--letters-secondary);
+  letter-spacing: 2px;
+}
+
+.texto-footer{
+  width: 20%;
+  display: flex;
+  justify-content: start;
+  
+}
