--- a/styles.css
+++ b/styles.css
@@ -157,7 +157,7 @@ ul {
   align-items: start;
 }
 .sobre-mi{
-  width: 120vw;
+  width: 130vw;
   background-color: #fff;
   display: flex;
   justify-content: center;
@@ -275,7 +275,7 @@ ul {
 }
 
 .icons-contact{
-  width: 70%;
+  width: 80%;
   display: flex;
   margin-left: 23%;
   justify-content: start;
@@ -287,7 +287,7 @@ footer{
   width: 100%;
   height: 100px;
   padding: 2%;
-
+  background-color: var(--bg-nav);
   display: flex;
   justify-content:center;
 }
@@ -298,14 +298,18 @@ footer{
 }
 
 .logo-footer{
+  
   display: flex;
   justify-content: end;
+  align-items: start;
+  
 }
 .container-footer{
+  
   display: flex;
-  width: 80%;
-  height: 60px;
-  gap: 10px;
+  width: 50%;
+  
+  gap: 20px;
   justify-content: center;
   align-items: center;
  
