--- a/styles.css
+++ b/styles.css
@@ -56,9 +56,9 @@ ul {
   background-image: url(assets/img/earth-3537401_640.jpg);
   background-size: 50%;
   background-position: right;
-  width: 100%;
+  max-width: 100%;
   height: 60vh;
-
+  
   font-size: 18px;
   display: flex;
   align-items: center;
@@ -68,10 +68,10 @@ ul {
 
 .hero-content {
   height: 100%;
-  width: 102vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  background-color: #cbc8ccdd;
+  background-color: #cbc8cca9;
   gap: 40px;
   justify-content: center;
   letter-spacing: 1px;
