--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,10 @@
 }
 body {
   background: linear-gradient(100deg, #442f57c5, #b77e992b);
-  width: 100%;
+  max-width: 100%;
+}
+.menu-label, #menu-toggle{
+  display: none;
 }
 
 .img-logo {
@@ -57,13 +60,13 @@ ul {
   background-size: 50%;
   background-position: right;
   max-width: 100%;
-  height: 60vh;
+  height: 65vh;
   
   font-size: 18px;
   display: flex;
   align-items: center;
   justify-content: start;
-  margin-bottom: 100px;
+
 }
 
 .hero-content {
@@ -229,7 +232,7 @@ a {
   flex-direction: column;
 
   align-items: start;
-  gap: 70px;
+  gap: 50px;
 }
 
 .contact-title {
