--- a/styles.css
+++ b/styles.css
@@ -217,7 +217,7 @@ a {
 /* sección contacto */
 
 .contact {
-  width: 100%;
+  max-width: 100%;
   height: 70vh;
   display: flex;
   background-color: var(--bg-about);
