--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ ul {
 }
 
 /* Sección hero */
-.hero {
+#hero {
   background-image: url(assets/img/earth-3537401_640.jpg);
   background-size: 50%;
   background-position: right;
@@ -83,11 +83,7 @@ ul {
   align-items: center;
 }
 
-/* .hero-img img{
- width: 100%;
-  
-  border-radius: 60%;
-} */
+
 .hero-content p {
   text-align: justify;
 }
@@ -130,7 +126,7 @@ a {
   color: var(--letters-secondary);
 }
 /* Sección About */
-.about {
+#about {
   width: 100%;
   display: flex;
   height: 30vh;
@@ -148,7 +144,7 @@ a {
   width: 80%;
   display: flex;
 }
-.cards {
+#ventajas {
   display: flex;
   width: 100%;
   height: 40vh;
@@ -216,7 +212,7 @@ a {
 }
 /* sección contacto */
 
-.contact {
+#contact {
   max-width: 100%;
   height: 70vh;
   display: flex;
